--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,20 @@
 {
   "manifest_version": 2,
   "name": "HA-CinemaTime",
-  "version": "1.0",
-
+  "version": "0.0.4",
+  "browser_specific_settings": {
+    "gecko": {
+      "strict_min_version": "58.0a1",
+      "id": "{707413e0-79e2-4b80-aa42-2575cee4ace9}"
+    }
+  },
   "description": "Lets your HA server know if certain websites are open, so you can run automations based on them (such as turning Hyperion on when you open Netflix).",
 
   "icons": {
-    "48": "icons/border-48.png"
+    "512": "icons/icon.png"
   },
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["browser-polyfill.js", "background.js"]
   },
   "permissions": ["tabs", "<all_urls>"],
   "browser_action": {
