--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "ha-firefox",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webextension-polyfill": "^0.8.0"
+  }
 }
